# new-alpha-trade

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md
docs/: README.md
docs/design/: alpha-network-capture-2026-05-21.md  new-alpha-trade.md  strategy-v2.md  wear-volume-spec.md
qr-service/: README.md  pyproject.toml
qr-service/src/qr_service/: __init__.py  face_verify.py  main.py  playwright_login.py  storage.py  token_refresh.py
qr-service/src/qr_service/api/: auth.py  face.py  qr.py
qr-service/tests/: test_health.py
scripts/: README.md  bootstrap_ssh.py  deploy.sh  install-server.sh  server-install.sh  server-logs.sh  server-status.sh  server-update.sh
scripts/config/: servers.json.example
scripts/etc/: qr-service.env.example  trading-engine.env.example
scripts/nginx/: new-alpha-trade.conf
scripts/systemd/: nat-qr-service.service  nat-trading-engine.service
scripts/win/: install.bat  install.py
trading-engine/: Cargo.toml  README.md
trading-engine/crates/api/: Cargo.toml
trading-engine/crates/api/src/: change_password.rs  decision.rs  http.rs  lib.rs  orders.rs  qr_client.rs  reconciler.rs  strategy_runner.rs  tokens.rs  user_stream.rs  ws.rs
trading-engine/crates/binance-alpha/: Cargo.toml
trading-engine/crates/binance-alpha/src/: lib.rs  rest.rs  twofa.rs  types.rs  ws.rs
trading-engine/crates/binance-alpha/tests/: integration_public.rs  integration_ws.rs
trading-engine/crates/persistence/: Cargo.toml
trading-engine/crates/persistence/src/: lib.rs  repo.rs
trading-engine/crates/persistence/src/migrations/: 0001_init.sql  0002_seed_strategies.sql  0003_trades_fills.sql  0004_seed_oto_strategy.sql  0005_rounds.sql  0006_seed_oto_smart.sql  0007_seed_oto_smart_maker.sql  0007_server_meta.sql  0008_trades_unique_fix.sql
trading-engine/crates/persistence/src/repo/: accounts.rs  jobs.rs  orders.rs  rounds.rs  server_meta.rs  stats.rs  trades.rs
trading-engine/crates/persistence/tests/: repo_crud.rs
trading-engine/crates/risk/: Cargo.toml
trading-engine/crates/risk/src/: lib.rs
trading-engine/crates/strategy/: Cargo.toml
trading-engine/crates/strategy/src/: lib.rs
trading-engine/src/: main.rs
web-ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.tsx  auth.ts  index.css  main.tsx
web-ui/src/api/: face.ts  qr.ts  server.ts  trade.ts  ws.ts
web-ui/src/components/: AuthGate.tsx  JobChart.tsx  LivePrice.tsx  OrderEvents.tsx  QrLoginModal.tsx  ServerExpiryCard.tsx  TwofaModal.tsx
web-ui/src/pages/: Accounts.tsx  Dashboard.tsx  Login.tsx  Settings.tsx  Strategy.tsx  Trade.tsx
