[project]
name = "qr-service"
version = "0.1.0"
description = "new-alpha-trade QR login service (Playwright + FastAPI)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "playwright>=1.43",
  "pydantic>=2.6",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "aiosqlite>=0.20",
  "pyotp>=2.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
