[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
persistence.workspace = true
binance-alpha.workspace = true
strategy.workspace = true
risk.workspace = true
chrono.workspace = true
reqwest.workspace = true
uuid.workspace = true
rust_decimal.workspace = true
sqlx.workspace = true
rand.workspace = true

[dev-dependencies]
rust_decimal_macros = "1.35"
tokio = { version = "1.38", features = ["macros", "rt"] }
