[package]
name = "binance-alpha"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
rust_decimal.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
totp-rs = { version = "5.6", default-features = false, features = ["otpauth"] }

[dev-dependencies]
rust_decimal_macros = "1.35"

# 给 api crate 用（rand 选随机金额）
